# nl2atl

./: .env.example  .gitattributes  .gitignore  README.md  classify_difficulty.py  nl2atl.py  package-lock.json  pyproject.toml  requirements.txt  run_all_experiments.py  run_judge_agreement.py  run_llm_judge.py  run_single_experiment.py
configs/: experiments.yaml  experiments_finetune_sweep.yaml  models.yaml  models_finetune_sweep.yaml
data/: dataset.json  dataset_gold.json  dataset_gold_no_difficulty.json
docs/: api.md  architecture.md  atl-primer.md  atl_primer.md  cli.md  configuration.md  dataset.md  design-decisions.md  development.md  difficulty_classification.md  evaluation.md  genvitamin.md  index.md  installation.md  quickstart.md  slurm.md  troubleshooting.md  usage.md
jobs/: run_all.sh  run_single.sh
notebooks/: analysis.ipynb
outputs/: efficiency_report.ipynb  efficiency_report.json  seed_aggregate_metrics_from_judged.ipynb  seed_aggregate_metrics_from_judged.json  seed_aggregate_metrics_from_predictions.json
slurm_scripts/: submit_array.sh  submit_llm_judge.sh
src/: __init__.py  api_server.py  azure_utils.py  classify_difficulty.py  config.py  constants.py  data_utils.py  env_utils.py  evaluator.py  exact_match_evaluator.py  experiment_runner.py  few_shot.py  io_utils.py  judge_agreement.py  llm_judge.py  model_registry.py  model_utils.py  utils.py
tests/: conftest.py  test_aggregate_seeds.py  test_api_server.py  test_azure.py  test_cli_main.py  test_config.py  test_data_utils.py  test_difficulty.py  test_exact_match.py  test_experiment_runner.py  (+13 more)
(+929 files in other folders)
