[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nl2atl"
version = "0.1.0"
description = "Natural Language to ATL formula generation and evaluation."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

[project.scripts]
nl2atl = "src.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src", "src.*"]
