[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nl2atl"
version = "0.1.0"
description = "Natural Language to ATL formula generation and evaluation."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
	"accelerate==1.12.0",
	"bitsandbytes==0.49.1",
	"datasets==4.5.0",
	"fastapi==0.128.0",
	"matplotlib==3.10.8",
	"numpy==2.2.6",
	"pandas==2.3.3",
	"peft==0.18.1",
	"pydantic==2.12.5",
	"pydantic-core==2.41.5",
	"python-dotenv==1.2.1",
	"pyyaml==6.0.3",
	"requests==2.32.5",
	"safetensors==0.7.0",
	"scikit-learn==1.7.2",
	"seaborn==0.13.2",
	"sentencepiece==0.2.1",
	"tiktoken==0.12.0",
	"torch==2.10.0",
	"transformers==5.0.0",
	"trl==0.27.1",
	"uvicorn==0.40.0",
]

[project.scripts]
nl2atl = "src.cli.main:main"

[dependency-groups]
dev = [
	"black",
	"flake8",
	"mypy",
	"pre-commit",
	"pytest==9.0.2",
	"pytest-cov==7.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src", "src.*"]
